--- a/src/views/nav-bar/NavBar.module.css
+++ b/src/views/nav-bar/NavBar.module.css
@@ -7,7 +7,8 @@
     display: flex;
     width: 100%;
     padding: 0.5em 0;
-    box-shadow: var(--devsite-header-lower-box-shadow,0 1px 2px 0 rgba(60,64,67,.3),0 2px 6px 2px rgba(60,64,67,.15))
+    box-shadow: var(--devsite-header-lower-box-shadow,0 1px 2px 0 rgba(60,64,67,.3),0 2px 6px 2px rgba(60,64,67,.15));
+    margin-bottom: 3vh;
 }
 
 .LogoTitleDiv {
