--- a/src/views/movie-component/movie-poster-caption/MoviePosterCaption.module.css
+++ b/src/views/movie-component/movie-poster-caption/MoviePosterCaption.module.css
@@ -7,7 +7,9 @@
     margin-block-start: 0.7em;
     margin-block-end: 0.2em;
     overflow: hidden;
-    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 .RatingRow {
