--- a/src/views/nav-bar/NavBar.module.css
+++ b/src/views/nav-bar/NavBar.module.css
@@ -6,10 +6,10 @@
 
 .NavBar {
     display: flex;
+    position: relative;
     justify-content: space-between;
     width: 100%;
     box-shadow: var(--devsite-header-lower-box-shadow,0 1px 2px 0 rgba(60,64,67,.3),0 2px 6px 2px rgba(60,64,67,.15));
-    margin-bottom: 3vh;
 }
 
 .LogoTitleDiv {
