--- a/src/views/nav-bar/NavBar.module.css
+++ b/src/views/nav-bar/NavBar.module.css
@@ -15,6 +15,8 @@
 .LogoTitleDiv {
     display: flex;
     align-items: center;
+    align-self: center;
+    text-decoration: none;
 }
 
 .Logo {
@@ -25,6 +27,8 @@
 
 .NavTitle {
     font-size: x-large;
+    color: black;
+    text-decoration: none;
     font-family: Courgette, serif;
     margin-block-start: 0;
     margin-block-end: 0;
