--- a/src/views/movie-details/movie-details-main-section/MovieDetailsMainSection.module.css
+++ b/src/views/movie-details/movie-details-main-section/MovieDetailsMainSection.module.css
@@ -56,7 +56,7 @@
     -webkit-box-orient: vertical;
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 800px), only screen and (max-device-aspect-ratio: 1919/1080), only screen and (max-height: 800px) {
     .Wrapper {
         flex-direction: column;
     }
