--- a/src/views/movie-details/movie-details-side-pannel/MovieDetailsSidePanel.module.css
+++ b/src/views/movie-details/movie-details-side-pannel/MovieDetailsSidePanel.module.css
@@ -10,7 +10,7 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
 }
 
-@media only screen and (max-device-aspect-ratio: 1919/1080) {
+@media only screen and (max-width: 800px), only screen and (max-device-aspect-ratio: 1919/1080), only screen and (max-height: 800px){
     .SidePanel {
         height: auto;
         min-width: 20vh;
@@ -18,6 +18,6 @@
         flex-direction: row;
         flex-wrap: wrap;
         row-gap: 4vh;
-        margin: 0 1em;
+        margin: 1em 1em;
     }
 }
