--- a/src/views/nav-bar/NavBar.module.css
+++ b/src/views/nav-bar/NavBar.module.css
@@ -9,6 +9,7 @@
     position: relative;
     justify-content: space-between;
     width: 100%;
+    padding: 0 1.5em;
     box-shadow: var(--devsite-header-lower-box-shadow,0 1px 2px 0 rgba(60,64,67,.3),0 2px 6px 2px rgba(60,64,67,.15));
 }
 
@@ -22,7 +23,7 @@
 .Logo {
     max-height: 3em;
     width: auto;
-    padding: 0 0.8em;
+    padding: 0 0.8em 0 0;
 }
 
 .NavTitle {
@@ -42,7 +43,7 @@
     /*margin-right: 0.8em;*/
     padding-inline-start: 0;
     font-size: larger;
-    margin: 0.7em 0.8em 0.7em 0;
+    margin: 0.7em 0;
 }
 
 @media only screen and (max-width: 800px) {
