--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,6 @@ html, body, div#root, .App{
 
 body *{
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -moz-tap-highlight-color: rgba(0, 0, 0, 0);
 }
